# qt

./: CMakeLists.txt
source/: CMakeLists.txt  textFinder.cpp  textFinder.h
